--- a/brookyn-cloudfoundry-launcher/pom.xml
+++ b/brookyn-cloudfoundry-launcher/pom.xml
@@ -24,7 +24,7 @@
 
     <parent>
         <artifactId>brooklyn-cloudfoundry</artifactId>
-        <groupId>io.brooklyn</groupId>
+        <groupId>org.apache.brooklyn</groupId>
         <version>1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
