--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,8 @@
     <parent>
         <groupId>org.apache.brooklyn</groupId>
         <artifactId>brooklyn-downstream-parent</artifactId>
-        <version>0.10.0-SNAPSHOT</version> <!-- BROOKLYN_VERSION -->
+        <version>0.10.0-SNAPSHOT</version>
+        <!-- BROOKLYN_VERSION -->
     </parent>
 
     <artifactId>brooklyn-cloudfoundry</artifactId>
@@ -100,7 +101,6 @@
             <plugin>
                 <groupId>org.apache.rat</groupId>
                 <artifactId>apache-rat-plugin</artifactId>
-                <version>0.11</version>
                 <executions>
                     <execution>
                         <phase>verify</phase>
@@ -110,34 +110,11 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <!--
-                         If you wish to override this list in the component (child) pom, ensure you use
-                             <excludes combine.children="merge">
-                         so that the child pom entries replace the parent entries
-                     -->
                     <excludes combine.children="append">
-                        <!-- git and IDE project files -->
-                        <!-- see https://issues.apache.org/jira/browse/RAT-107 -->
-                        <exclude>**/.git/**</exclude>
-                        <exclude>**/.gitignore</exclude>
-                        <exclude>**/.idea/**</exclude>
-                        <exclude>**/*.iml</exclude>
-                        <exclude>**/.classpath/**</exclude>
-                        <exclude>**/.project</exclude>
-                        <exclude>**/.settings/**</exclude>
-                        <exclude>**/*.log</exclude>
-                        <exclude>**/brooklyn*.log.*</exclude>
-                        <exclude>**/target/**</exclude>
-                        <!-- files not requiring licence -->
                         <exclude>README.md</exclude>
-                        <exclude>LICENSE.md</exclude>
-                        <exclude>.travis.yml</exclude>
-                        <exclude>**/*.yaml</exclude>
                     </excludes>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
-
 </project>
