--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,8 @@
 
     <properties>
         <brooklyn.version>0.10.0-SNAPSHOT</brooklyn.version>
+        <cloudfoundry.client.version>1.1.3</cloudfoundry.client.version>
+        <mockito.version>1.10.19</mockito.version>
     </properties>
 
     <licenses>
@@ -63,10 +65,30 @@
         </dependency>
 
         <dependency>
+            <groupId>org.cloudfoundry</groupId>
+            <artifactId>cloudfoundry-client-lib</artifactId>
+            <version>${cloudfoundry.client.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito.version}</version>
+        </dependency>
+
+        <dependency>
             <!-- this gives us flexible and easy-to-use logging; just edit logback-custom.xml! -->
             <groupId>org.apache.brooklyn</groupId>
             <artifactId>brooklyn-logback-xml</artifactId>
             <version>${brooklyn.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.brooklyn</groupId>
+            <artifactId>brooklyn-core</artifactId>
+            <version>${brooklyn.version}</version>
+            <classifier>tests</classifier>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
