--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,7 @@
     to you under the Apache License, Version 2.0 (the
     "License"); you may not use this file except in compliance
     with the License.  You may obtain a copy of the License at
-
      http://www.apache.org/licenses/LICENSE-2.0
-
     Unless required by applicable law or agreed to in writing,
     software distributed under the License is distributed on an
     "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -32,13 +30,10 @@
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
-    <name>Brooklyn CloudFoundry parent project</name>
+    <name>Brooklyn CloudFoundry project</name>
 
     <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <project.entry>org.apache.brooklyn.cloudfoundry.BrooklynCloudFoundryMain</project.entry>
-        <brooklyn.version>0.10.0-SNAPSHOT</brooklyn.version> <!-- BROOKLYN_VERSION -->
+        <brooklyn.version>0.10.0-SNAPSHOT</brooklyn.version>
     </properties>
 
     <licenses>
@@ -48,42 +43,38 @@
         </license>
     </licenses>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.apache.brooklyn</groupId>
-                <artifactId>brooklyn-all</artifactId>
-                <version>${brooklyn.version}</version>
-            </dependency>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.brooklyn</groupId>
+            <artifactId>brooklyn-all</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
 
-            <dependency>
-                <groupId>org.apache.brooklyn</groupId>
-                <artifactId>brooklyn-core</artifactId>
-                <version>${brooklyn.version}</version>
-            </dependency>
+        <dependency>
+            <groupId>org.apache.brooklyn</groupId>
+            <artifactId>brooklyn-core</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
 
-            <dependency>
-                <groupId>org.apache.brooklyn</groupId>
-                <artifactId>brooklyn-api</artifactId>
-                <version>${brooklyn.version}</version>
-            </dependency>
+        <dependency>
+            <groupId>org.apache.brooklyn</groupId>
+            <artifactId>brooklyn-api</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
 
-            <dependency>
-                <!-- this gives us flexible and easy-to-use logging; just edit logback-custom.xml! -->
-                <groupId>org.apache.brooklyn</groupId>
-                <artifactId>brooklyn-logback-xml</artifactId>
-                <version>${brooklyn.version}</version>
-            </dependency>
-
-        </dependencies>
-    </dependencyManagement>
+        <dependency>
+            <!-- this gives us flexible and easy-to-use logging; just edit logback-custom.xml! -->
+            <groupId>org.apache.brooklyn</groupId>
+            <artifactId>brooklyn-logback-xml</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.rat</groupId>
                 <artifactId>apache-rat-plugin</artifactId>
-                <version>0.11</version>
                 <executions>
                     <execution>
                         <phase>verify</phase>
@@ -93,34 +84,12 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <!--
-                         If you wish to override this list in the component (child) pom, ensure you use
-                             <excludes combine.children="merge">
-                         so that the child pom entries replace the parent entries
-                     -->
                     <excludes combine.children="append">
-                        <!-- git and IDE project files -->
-                        <!-- see https://issues.apache.org/jira/browse/RAT-107 -->
-                        <exclude>**/.git/**</exclude>
-                        <exclude>**/.gitignore</exclude>
-                        <exclude>**/.idea/**</exclude>
-                        <exclude>**/*.iml</exclude>
-                        <exclude>**/.classpath/**</exclude>
-                        <exclude>**/.project</exclude>
-                        <exclude>**/.settings/**</exclude>
-                        <exclude>**/*.log</exclude>
-                        <exclude>**/brooklyn*.log.*</exclude>
-                        <exclude>**/target/**</exclude>
-                        <!-- files not requiring licence -->
                         <exclude>README.md</exclude>
-                        <exclude>LICENSE.md</exclude>
-                        <exclude>.travis.yml</exclude>
-                        <exclude>**/*.yaml</exclude>
+                        <exclude>**.log</exclude>
                     </excludes>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
-
 </project>
