--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <!-- TODO updating to Snapshot -->
         <cloudfoundry.client.version>1.1.3</cloudfoundry.client.version>
         <mockito.version>1.10.19</mockito.version>
+        <mockwebserver.version>2.7.0</mockwebserver.version>
     </properties>
 
     <licenses>
@@ -82,6 +83,14 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>mockwebserver</artifactId>
+            <version>${mockwebserver.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
