--- a/src/test/resources/vanilla-cf-env.yml
+++ b/src/test/resources/vanilla-cf-env.yml
@@ -16,16 +16,14 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-name: Vanilla CloudFoundry example with env
+name: Vanilla CloudFoundry application with env
 location: pivotal-ws
 services:
-- type: org.apache.brooklyn.cloudfoundry.entity.VanillaCloudfoundryApplication
+- type: org.apache.brooklyn.cloudfoundry.entity.VanillaCloudFoundryApplication
   id: vanilla-app
   brooklyn.config:
-    name: vanilla-cf-env-example
     path: classpath://brooklyn-example-hello-world-sql-webapp-in-paas.war
     buildpack: https://github.com/cloudfoundry/java-buildpack.git
-    domain: cfapps.io
     env:
       env1: value1
       env2: 2
