--- a/src/test/resources/vanilla-cf-host-and-domain.yml
+++ b/src/test/resources/vanilla-cf-host-and-domain.yml
@@ -22,7 +22,7 @@ services:
 - type: org.apache.brooklyn.cloudfoundry.entity.VanillaCloudFoundryApplication
   id: vanilla-app
   brooklyn.config:
-    name-app: vanilla-cf-app-example
+    nameApp: vanilla-cf-app-example
     path: classpath://brooklyn-example-hello-world-sql-webapp-in-paas.war
     buildpack: https://github.com/cloudfoundry/java-buildpack.git
     host: brooklyn-test-host
