--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <name>Brooklyn CloudFoundry project</name>
 
     <properties>
+        <java.version>1.8</java.version>
         <brooklyn.version>0.10.0-SNAPSHOT</brooklyn.version>
         <cloudfoundry.client.version>2.0.0.BUILD-SNAPSHOT</cloudfoundry.client.version>
         <reactor.core.version>3.0.0.RC1</reactor.core.version>
