--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 
     <properties>
         <brooklyn.version>0.10.0-SNAPSHOT</brooklyn.version>
+        <java.version>1.8</java.version>
         <cloudfoundry.client.version>2.0.0.BUILD-SNAPSHOT</cloudfoundry.client.version>
         <reactor.core.version>3.0.0.RC1</reactor.core.version>
         <reactor.netty.version>0.5.0.BUILD-SNAPSHOT</reactor.netty.version>
