Updating cf client version (#16)
* Fix the location configuration in the yaml example

* Adding examples BluePrints for VanillaCloudFoundryApplication
Fixing some test.

* Fixing Application Name Flag

* Updating CloudFoundryClient version to 2.0.0.BUILD-SNAPSHOT.

* Updating travis to use Java8

* Minor typo

* Refctoring Registry by using suppliers

* Use scale operation to scale an application (Memory, DiskQuota, Instances)

* Avoiding futures for the CloudFoundry usage

--- a/src/test/resources/vanilla-cf-host-and-domain.yml
+++ b/src/test/resources/vanilla-cf-host-and-domain.yml
@@ -16,20 +16,14 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-name: CloudFoundryPaasLocation configuration example
-location:
-  cloudfoundry:
-    user: user@mail.com
-    password: secret
-    org: secret_organization
-    endpoint: https://api.run.secret.io
-    space: development
+name: Vanilla CloudFoundry using host and domain to configure the application
+location: pivotal-ws
 services:
 - type: org.apache.brooklyn.cloudfoundry.entity.VanillaCloudFoundryApplication
   id: vanilla-app
   brooklyn.config:
-    name-app: name
+    nameApp: vanilla-cf-app-example
     path: classpath://brooklyn-example-hello-world-sql-webapp-in-paas.war
     buildpack: https://github.com/cloudfoundry/java-buildpack.git
-    domain: domain
-    host: application-host
+    host: brooklyn-test-host
+    domain: cfapps.io
