--- a/src/test/resources/vanilla-cf-resources-profile.yml
+++ b/src/test/resources/vanilla-cf-resources-profile.yml
@@ -16,16 +16,14 @@
 # specific language governing permissions and limitations
 # under the License.
 #
-name: Vanilla CloudFoundry example
+name: Vanilla CloudFoundry application with resource profile configuration
 location: pivotal-ws
 services:
-- type: org.apache.brooklyn.cloudfoundry.entity.VanillaCloudfoundryApplication
+- type: org.apache.brooklyn.cloudfoundry.entity.VanillaCloudFoundryApplication
   id: vanilla-app
   brooklyn.config:
-    name: vanilla-cf-app-example
     path: classpath://brooklyn-example-hello-world-sql-webapp-in-paas.war
     buildpack: https://github.com/cloudfoundry/java-buildpack.git
-    domain: cfapps.io
-    memory: 512
+    memory: 1024
     disk_quota: 2048
     instances: 1
