--- a/src/test/resources/cloudfoundry-location-example.yml
+++ b/src/test/resources/cloudfoundry-location-example.yml
@@ -19,8 +19,9 @@
 name: CloudFoundryPaasLocation configuration example
 location:
   cloudfoundry:
-    user: user@mail.com
-    password: secret
+    provider: provider
+    identity: user@mail.com
+    credential: secret
     org: secret_organization
     endpoint: https://api.run.secret.io
     space: development
