--- a/src/test/resources/cloudfoundry-location-example.yml
+++ b/src/test/resources/cloudfoundry-location-example.yml
@@ -29,7 +29,7 @@ services:
 - type: org.apache.brooklyn.cloudfoundry.entity.VanillaCloudFoundryApplication
   id: vanilla-app
   brooklyn.config:
-    name-app: name
+    nameApp: name
     path: classpath://brooklyn-example-hello-world-sql-webapp-in-paas.war
     buildpack: https://github.com/cloudfoundry/java-buildpack.git
     domain: domain
