--- a/pom.xml
+++ b/pom.xml
@@ -32,11 +32,13 @@
     <name>Brooklyn :: CloudFoundry :: Project</name>
 
     <properties>
-        <brooklyn.version>0.10.0</brooklyn.version>
+        <brooklyn.version>0.10.0-20161121.1656</brooklyn.version>
         <java.version>1.8</java.version>
-        <cloudfoundry.client.version>2.3.0.RELEASE</cloudfoundry.client.version>
-        <reactor.core.version>3.0.4.RELEASE</reactor.core.version>
+        <cloudfoundry.client.version>2.4.0.BUILD-SNAPSHOT</cloudfoundry.client.version>
+        <reactor.core.version>3.0.5.RELEASE</reactor.core.version>
         <reactor.netty.version>0.6.0.RELEASE</reactor.netty.version>
+
+        <jackson.version>2.8.5</jackson.version>
         <mockito.version>1.10.19</mockito.version>
         <mockwebserver.version>2.7.0</mockwebserver.version>
 
@@ -52,6 +54,10 @@
         
         <osgi.import>
             !android.util*,
+            !org.python.core,
+            !io.projectreactor*,
+            !org.cloudfoundry*,
+            !reactor*,
             *
         </osgi.import>
         <osgi.export>
@@ -91,34 +97,64 @@
 
     <build>
         <plugins>
+            <!--<plugin>-->
+                <!--<groupId>org.apache.felix</groupId>-->
+                <!--<artifactId>maven-bundle-plugin</artifactId>-->
+                <!--<version>3.0.1</version>-->
+                <!--<extensions>false</extensions>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<id>bundle</id>-->
+                        <!--<phase>package</phase>-->
+                        <!--<goals>-->
+                            <!--<goal>bundle</goal>-->
+                        <!--</goals>-->
+                        <!--<configuration>-->
+                            <!--<instructions>-->
+                                <!--<Bundle-Name>${project.name}</Bundle-Name>-->
+                                <!--<Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>-->
+                                <!--<Export-Package>${osgi.export}</Export-Package>-->
+                                <!--<Import-Package>${osgi.import}</Import-Package>-->
+                                <!--<DynamicImport-Package>${osgi.dynamic.import}</DynamicImport-Package>-->
+                                <!--<Private-Package>${osgi.private}</Private-Package>-->
+                                <!--<Require-Bundle>${osgi.bundles}</Require-Bundle>-->
+                                <!--<Bundle-Activator>${osgi.activator}</Bundle-Activator>-->
+                                <!--<Export-Service>${osgi.export.service}</Export-Service>-->
+                            <!--</instructions>-->
+                            <!--<classifier>bundle</classifier>-->
+                        <!--</configuration>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>2.5.4</version>
-                <extensions>false</extensions>
+                <version>2.3.7</version>
+                <extensions>true</extensions>
                 <executions>
                     <execution>
-                        <id>bundle</id>
-                        <phase>package</phase>
+                        <id>bundle-manifest</id>
+                        <phase>process-classes</phase>
                         <goals>
-                            <goal>bundle</goal>
+                            <goal>manifest</goal>
                         </goals>
-                        <configuration>
-                            <instructions>
-                                <Bundle-Name>${project.name}</Bundle-Name>
-                                <Bundle-SymbolicName>${project.groupId}.${project.artifactId}</Bundle-SymbolicName>
-                                <Export-Package>${osgi.export}</Export-Package>
-                                <Import-Package>${osgi.import}</Import-Package>
-                                <DynamicImport-Package>${osgi.dynamic.import}</DynamicImport-Package>
-                                <Private-Package>${osgi.private}</Private-Package>
-                                <Require-Bundle>${osgi.bundles}</Require-Bundle>
-                                <Bundle-Activator>${osgi.activator}</Bundle-Activator>
-                                <Export-Service>${osgi.export.service}</Export-Service>
-                            </instructions>
-                            <classifier>bundle</classifier>
-                        </configuration>
                     </execution>
                 </executions>
+                <configuration>
+                    <supportedProjectTypes>
+                        <supportedProjectType>jar</supportedProjectType>
+                    </supportedProjectTypes>
+                    <instructions>
+                        <!-- OSGi specific instruction -->
+                        <Import-Package>!com.maxmind.geoip2,*</Import-Package>
+                    </instructions>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.karaf.tooling</groupId>
+                <artifactId>karaf-maven-plugin</artifactId>
+                <version>${karaf.version}</version>
+                <extensions>true</extensions>
             </plugin>
         </plugins>
     </build>
